--- a/index.html
+++ b/index.html
@@ -96,77 +96,83 @@
   </header>
   <main id="maincontent" class="main-content">
     <section class="container hero-container">
-      <div class="row">
-        <div class="header-text col-md-5 col-md-offset-1 col-sm-12" data-aos="fade-in">
-          <span>Hi! I'm</span>
-          <h1>Joanitha Gomez</h1>
-          <h4 class="mb-4 pb-2">Developer, debugger and dessert lover 🍨</br></h4>
-          <div class="header-list">
-            <div class="my-3">
-              <img class="l-icon mr-2" src="assets/award.svg" alt=""/>
-              <span id="numberOfYears">5+</span> years of frontend development experience
+      <div class="hero-wrapper">
+        <div class="row">
+          <div class="header-text col-md-5 col-md-offset-1 col-sm-12" data-aos="fade-in">
+            <span>Hi! I'm</span>
+            <h1>Joanitha Gomez</h1>
+            <h4 class="mb-4 pb-2">Developer, debugger and dessert lover 🍨</br></h4>
+            <div class="header-list">
+              <div class="my-3">
+                <img class="l-icon mr-2" src="assets/award.svg" alt=""/>
+                <span id="numberOfYears">5+</span> years of frontend development experience
+              </div>
+              <div class="my-3">
+                <img class="l-icon mr-1" src="assets/graduation-cap.svg" alt=""/>
+                Graduate from San José State University, California
+              </div>
+              <div class="my-3">
+                <img class="l-icon mr-1" src="assets/pin.svg" alt=""/>
+                India / SF Bay Area
+              </div>
             </div>
-            <div class="my-3">
-              <img class="l-icon mr-1" src="assets/graduation-cap.svg" alt=""/>
-              Graduate from San José State University, California
-            </div>
-            <div class="my-3">
-              <img class="l-icon mr-1" src="assets/pin.svg" alt=""/>
-              India / SF Bay Area
+
+            <div class="icons">
+              <a class="icon-item emailid" href="mailto:joanitha.c.gomez@gmail.com" aria-label="Send email">
+                  <img src="assets/mail.svg" alt=""/>
+              </a>
+              <a target="_blank" href="https://www.linkedin.com/in/joanitha-christle-gomez/" aria-label="Visit linkedin profile" class="icon-item linkedin-icon">
+                    <img src="assets/linkedin.svg" alt=""/>
+              </a>
+              <a target="_blank" href="https://github.com/joanithagomez" aria-label="Visit github profile" class="icon-item github-icon">
+                <img src="assets/github.svg"/ alt="">
+              </a>
             </div>
           </div>
 
-          <div class="icons">
-            <a class="icon-item emailid" href="mailto:joanitha.c.gomez@gmail.com" aria-label="Send email">
-                <img src="assets/mail.svg" alt=""/>
-            </a>
-            <a target="_blank" href="https://www.linkedin.com/in/joanitha-christle-gomez/" aria-label="Visit linkedin profile" class="icon-item linkedin-icon">
-                  <img src="assets/linkedin.svg" alt=""/>
-            </a>
-            <a target="_blank" href="https://github.com/joanithagomez" aria-label="Visit github profile" class="icon-item github-icon">
-              <img src="assets/github.svg"/ alt="">
-            </a>
-          </div>
-        </div>
-
-        <div class="col-md-6 col-sm-12">
-          <div class="memoji-container ">
-              <img src="assets/memoji.png" class="head img-fluid" alt="A memoji of Joanitha"/>
-              <div class="skills-circle">
-                <div class="circle-item">
-                  <img src="assets/images/icons8-accessibility-48.png"/>
-                </div>
-                <div class="circle-item">
-                  <img src="assets/images/icons8-react-48.png"/>
-                </div>
-                <div class="circle-item">
-                  <img src="assets/images/icons8-angular-48.png"/>
-                </div>
-                <div class="circle-item">
-                  <img src="assets/images/icons8-typescript-48.png"/>
-                </div>
-                <div class="circle-item">
-                  <img src="assets/images/icons8-javascript-48.png"/>
-                </div>
-                <div class="circle-item">
-                  <img src="assets/images/icons8-css-48.png"/>
-                </div>
-                <div class="circle-item">
-                  <img src="assets/images/icons8-html-48.png"/>
-                </div>
-                  <div class="circle-item">
-                    <img src="assets/images/icons8-jquery-48.png"/>
+          <div class="col-md-6 col-sm-12 ">
+            <div class="memoji-wrapper">
+              <div class="memoji-container">
+                  <div>
+                    <img src="assets/memoji.png" class="head img-fluid" alt="A memoji of Joanitha"/>
                   </div>
-                  <div class="circle-item">
-                    <img src="assets/images/icons8-material-ui-48.png"/>
-                  </div>
-                  <div class="circle-item">
-                    <img src="assets/images/icons8-bootstrap-48.png"/>
-                  </div>
-                  <div class="circle-item i-github">
-                    <img src="assets/images/icons8-git-48.png"/>
-                  </div>
-                </div>
+                  <div class="skills-circle">
+                    <div class="circle-item">
+                      <img src="assets/images/icons8-accessibility-48.png"/>
+                    </div>
+                    <div class="circle-item">
+                      <img src="assets/images/icons8-react-48.png"/>
+                    </div>
+                    <div class="circle-item">
+                      <img src="assets/images/icons8-angular-48.png"/>
+                    </div>
+                    <div class="circle-item">
+                      <img src="assets/images/icons8-typescript-48.png"/>
+                    </div>
+                    <div class="circle-item">
+                      <img src="assets/images/icons8-javascript-48.png"/>
+                    </div>
+                    <div class="circle-item">
+                      <img src="assets/images/icons8-css-48.png"/>
+                    </div>
+                    <div class="circle-item">
+                      <img src="assets/images/icons8-html-48.png"/>
+                    </div>
+                      <div class="circle-item">
+                        <img src="assets/images/icons8-jquery-48.png"/>
+                      </div>
+                      <div class="circle-item">
+                        <img src="assets/images/icons8-material-ui-48.png"/>
+                      </div>
+                      <div class="circle-item">
+                        <img src="assets/images/icons8-bootstrap-48.png"/>
+                      </div>
+                      <div class="circle-item i-github">
+                        <img src="assets/images/icons8-git-48.png"/>
+                      </div>
+                    </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -208,7 +214,7 @@
             <h4>Certifications</h4>
             <div class="certifications">
               <div class="certification-item">
-                  <p class="mb-0"><a href="https://certificate.algoexpert.io/FrontendExpert%20Certificate%20FE-b06250ed3b" target="_blank">Frontend Development by AlgoExpert</a></p>
+                  <a href="https://certificate.algoexpert.io/FrontendExpert%20Certificate%20FE-b06250ed3b" target="_blank"><p class="mb-0">Frontend Development by AlgoExpert</p></a>
               </div>
               <div class="certification-item">
                   <p class="mb-0"><a href="https://www.udemy.com/certificate/UC-3c4b6012-bd14-4fb9-9a9c-07ed638d9b47/" target="_blank">GraphQL with React</a></p>
